# xpcs_webplot

./: .gitignore  CONTRIBUTING.rst  DEVELOPMENT.md  FLASK_MIGRATION_GUIDE.md  HISTORY.rst  LICENSE  Makefile  README.rst  app.py  cluster_results.html  html_utlits.py  plot_images.py  plot_images_multitau.py  plot_images_twotime.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  template.html  template2.html  template_combined.html  tox.ini  webplot_cli.py
.gemini/: cli_help_improvements.md
docs/: README.md  api_reference.md  architecture.md  build_pdf.sh  deployment_guide.md  development_guide.md  faq.md  getting_started.md  quick_reference.md  user_guide.md
src/xpcs_webplot/: cli.py  converter.py  flask_app.py  html_utlits.py  metadata_utils.py  migrate_to_flask.py  monitor_and_process.py  plot_images.py  prepare_html_for_serving.py  quick_start_guide.rst  webplot_cli.py
src/xpcs_webplot/templates/: combined_iframe.html  combined_preview.html  flask_index.html  flask_subdir.html  single.html
template/: combined.html  combined_iframe.html  combined_preview.html  template_single.html
tests/: __init__.py  test_flask_server.py  test_xpcs_webplot.py
xpcs_webplot/: __init__.py  aps_8idi.py  cli.py  gladier_plot.py  html_utlits.py  monitor_and_process.py  plot_images.py  webplot_cli.py
xpcs_webplot/template/: single.html
xpcs_webplot/templates/: combined.html  flask_index.html  flask_single.html
